--- a/src/app/product-details/product-details.component.html
+++ b/src/app/product-details/product-details.component.html
@@ -1,3 +1,6 @@
-<p *ngIf="product">
-  {{ product.description }}
-</p>
+<p>details</p>
+
+<div *ngIf="product">
+  <h3>{{ product.description }}</h3>
+  <button (click)="addToCart(product)">Buy</button>
+</div>
