--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -5,3 +5,25 @@
   <h3>{{ item.name }}</h3>
   <h3>$ {{ item.price }}</h3>
 </div>
+
+<div>
+  <form [formGroup]="checkoutform" (ngSubmit)="OnSubmit()">
+
+    <div>
+      <label for="name">
+        Name
+      </label>
+      <input id="name" type="text" formControlName="name">
+    </div>
+
+    <div>
+      <label for="address">
+        Address
+      </label>
+      <input id="address" type="text" formControlName="address">
+    </div>
+
+    <button class="button" type="submit">Purchase</button>
+
+  </form>
+</div>
